--- a/main.css
+++ b/main.css
@@ -9,62 +9,65 @@
 	  
 */
 
-* { padding: 0; margin: 0; }
+* {
+  padding: 0;
+  margin: 0;
+}
 
+body {
+  height: 100%;
+  margin: 10px;
+  padding: 0;
+  background-color: black;
+  color: #ffffff;
+}
 
-
-	body {
-		height: 100%;
-		margin: 10px;
-		padding: 0;
-		background-color: black;
-		color:#ffffff;
-	}
-
-
-#wrapper { 
- margin: 0 auto;
- width: 800px;
+#wrapper {
+  margin: 0 auto;
+  width: 800px;
 }
 #header {
- width: 625px;
- color: white;
- padding-left: 175px;
- height: 20px;
- margin: 0px 0px 8px 0px;
- background: black;
+  width: 625px;
+  color: white;
+  padding-left: 175px;
+  height: 20px;
+  margin: 0px 0px 8px 0px;
+  background: black;
 }
-#header A {
-	COLOR: white; TEXT-DECORATION: none
+#header a {
+  color: white;
+  text-decoration: none;
 }
-#header A:hover {
-	color : gray
+#header a:hover {
+  color: gray;
 }
 
-#content { 
- width: 800px;
- color: #333;
- background: black;
- margin: 0px 0px 0px 0px;
- padding: 0px;
- height: 360px;
+#content {
+  width: 800px;
+  color: #333;
+  background: black;
+  margin: 0px 0px 0px 0px;
+  padding: 0px;
+  height: 360px;
 }
 
 #content p {
-color: black;
-padding-left: 175px;
-padding-top: 20px;
+  color: black;
+  padding-left: 175px;
+  padding-top: 20px;
 }
-#footer { 
- float: right;
- color: white;
- width: 800px;
- background: black;
- margin: 8px 0px 0px 0px;
- padding: 0px;
+#footer {
+  float: right;
+  color: white;
+  width: 800px;
+  background: black;
+  margin: 8px 0px 0px 0px;
+  padding: 0px;
 }
-#footer A {
-	COLOR: white; TEXT-DECORATION: none
+#footer a {
+  color: white;
+  text-decoration: none;
 }
-#footer A:hover {
-	color : gray
+#footer a:hover {
+  color: gray;
+}
